--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* styles.css */
 
-/* General Styles */
+/* Generahl Styles */
 body {
   font-family: 'Roboto', sans-serif;
   background-color: #f7f9fc;
